--- a/scraping/index.html
+++ b/scraping/index.html
@@ -6,7 +6,7 @@
 
                                                                <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Lalibrairie.com - Une seule adresse, plus de 2500 librairies et points libraires en ligne</title>
+    <title>Lemonlabs.fr - site de demonstration de scraping</title>
     <meta name="description" lang="fr" content="Lalibrairie.com renforce le lien social. Les livres que vous achetez en ligne sont mis à disposition dans l'une de nos librairies françaises partenaires ou sont livrés partout en France comme à l'étranger. Une démarche collective et mutualiste de la librairie indépendante."/>
                         <link rel="icon" href="/static/build/images/favicon.ico"/>
     <link rel="shortcut icon" href="/static/build/images/favicon.ico"/>
@@ -253,10 +253,10 @@
 >
         <li class="nav-item ">
         <a class="nav-link text-white px-2 px-xl-3 icon-container "
-                                    href="/choisir-un-point-libraire.html"
+                                    href="http://robots-txt.com/"
                         >
                             <span class="d-none d-xl-inline ff-2">
-                                            Trouver ma <span class="ff-2 fst-italic">librairie</span>
+                                            En savoir plus sur les fichiers anti robots
                                     </span>
                         <i class="icon icon-book d-xl-none" title="Trouver ma librairie"></i>
                     </a>
@@ -325,7 +325,7 @@
     slider-nav-autoplay
     slider-nav-autopause
         ">
-    <ul class="slider-container" style="">
+    <ul class="slider-container" >
                     <li>
                 <div class="row justify-content-md-center ">
                     <p class="col col-lg-11 text-center">
