--- a/scraping/index.html
+++ b/scraping/index.html
@@ -6,8 +6,11 @@
 
                                                                <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Lemonlabs.fr - site de demonstration de scraping</title>
-    <meta name="description" lang="fr" content="Lalibrairie.com renforce le lien social. Les livres que vous achetez en ligne sont mis à disposition dans l'une de nos librairies françaises partenaires ou sont livrés partout en France comme à l'étranger. Une démarche collective et mutualiste de la librairie indépendante."/>
+    <title>Lemonlabs.fr - site de demonstration de scraping</title> 
+    <meta name="description" lang="fr" content="Ce site de lemonlabs.fr permet de s'entrainer au scraping étique sur differents contexte: site commercial, liste de mail etc."/>
+
+
+
                         <link rel="icon" href="/static/build/images/favicon.ico"/>
     <link rel="shortcut icon" href="/static/build/images/favicon.ico"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -306,8 +309,8 @@
     <div class="container text-white">
         <div class="row justify-content-md-center pt-4 pb-5">
             <h1 class="h3 col col-lg-10 text-center">
-                La librairie en ligne qui défend les libraires indépendants
-            </h1>
+         Ce site de Lemonlabs est destiné à s'entrainer pour du web scraping éthique 
+	    </h1>
         </div>
         
         <div class="
@@ -329,9 +332,8 @@
                     <li>
                 <div class="row justify-content-md-center ">
                     <p class="col col-lg-11 text-center">
-                        Nous prenons le parti de vous proposer <span class="text-brand-3 text-bold">un mode de consommation
-                        respectueux et durable</span>, au sein duquel chaque acteur contribue à
-                        maintenir l’écosystème du livre.
+                     Vous pouvez tester vos scrits de scraping dans differents contextes:<br>
+		     Un faux site commercial - Des mails dans une table - Des données dans une page 	
                     </p>
                 </div>
             </li>
