--- a/scraping/index.html
+++ b/scraping/index.html
@@ -340,26 +340,17 @@
             <li>
                 <div class="row justify-content-md-center ">
                     <p class="col col-lg-11 text-center">
-                        Les librairies indépendantes sont des moteurs de créativité et de développement <span class="text-brand-3
-        text-bold">culturel.</span><br>
-                        Elles offrent une sélection de livres variés et originaux, des conseils personnalisés et un lien
-                        privilégié avec les auteurs.<br>
-                        Elles sont à soutenir pour leur contribution indispensable à la vie littéraire et au dynamisme <span class="text-brand-3
-        text-bold">local.</span>
+		Lemonlabs.fr met aussi a votre dispositions des notebooks consacrés au langage Python.<br>
+		Dans differents contextes: Python initiation , Python perfectionnement, Python pour le web<br>
+                Python pour les datasciences.  	
+
                     </p>
                 </div>
             </li>
             <li>
                 <div class="row justify-content-md-center ">
                     <p class="col col-lg-11 text-center">
-                        Nous prônons un nouveau <span class="text-brand-3
-        text-bold">mode de distribution alternatif</span> aux circuits traditionnels tout en
-                        protégeant votre librairie de proximité.<br/>
-                        Aucun frais de port garanti si vous retirez votre livre dans la librairie au coin de votre
-                        rue.<br/>
-                        Les <span class="text-brand-3
-        text-bold">librairies locales</span> sont le cœur de ce réseau, alors maintenons ces lieux d'échanges et
-                        de conseils.
+                 Lemonlabs.fr sert aussi de support pour des articles du blog d'eric German.
                     </p>
                 </div>
             </li>
@@ -398,22 +389,22 @@
          >
              <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-around w-100">
                                       <li class="nav-item">
-                         <a class="nav-link fs-20 text-brand-1 gtag-event fill-underline" data-gtag-event="navbar_click_livres" aria-current="page" href="/livres.html">Livres en français</a>
+                         <a class="nav-link fs-20 text-brand-1 gtag-event fill-underline" data-gtag-event="navbar_click_livres" aria-current="page" href="/livres.html">a completer</a>
                      </li>
                                       <li class="nav-item">
-                         <a class="nav-link fs-20 text-brand-1 gtag-event fill-underline" data-gtag-event="navbar_click_menu_livres_vo" aria-current="page" href="#">Livres en VO</a>
+                         <a class="nav-link fs-20 text-brand-1 gtag-event fill-underline" data-gtag-event="navbar_click_menu_livres_vo" aria-current="page" href="#">A COMPLETER</a>
                      </li>
                                       <li class="nav-item">
-                         <a class="nav-link fs-20 text-brand-1 gtag-event fill-underline" data-gtag-event="navbar_click_selections_thematiques" aria-current="page" href="/livres/selection-thematique-science-fiction-2021,1338.html">Sélections thématiques</a>
+                         <a class="nav-link fs-20 text-brand-1 gtag-event fill-underline" data-gtag-event="navbar_click_selections_thematiques" aria-current="page" href="/livres/selection-thematique-science-fiction-2021,1338.html">A COMPLETER</a>
                      </li>
                                       <li class="nav-item">
-                         <a class="nav-link fs-20 text-brand-1 gtag-event fill-underline" data-gtag-event="navbar_click_conseils_de_libraires" aria-current="page" href="/livres/conseils-de-lecture-de-nos-libraires.html">Conseils de nos libraires</a>
+                         <a class="nav-link fs-20 text-brand-1 gtag-event fill-underline" data-gtag-event="navbar_click_conseils_de_libraires" aria-current="page" href="/livres/conseils-de-lecture-de-nos-libraires.html">A COMPLETER</a>
                      </li>
                                       <li class="nav-item">
-                         <a class="nav-link fs-20 text-brand-1 gtag-event fill-underline" data-gtag-event="navbar_click_bestseller" aria-current="page" href="/livres/meilleures-ventes.html">Meilleures ventes</a>
+                         <a class="nav-link fs-20 text-brand-1 gtag-event fill-underline" data-gtag-event="navbar_click_bestseller" aria-current="page" href="/livres/meilleures-ventes.html">A COMPLETER</a>
                      </li>
                                       <li class="nav-item">
-                         <a class="nav-link fs-20 text-brand-1 gtag-event fill-underline" data-gtag-event="navbar_click_bon_cadeaux" aria-current="page" href="/bons-cadeau/configuration">Bons cadeaux</a>
+                         <a class="nav-link fs-20 text-brand-1 gtag-event fill-underline" data-gtag-event="navbar_click_bon_cadeaux" aria-current="page" href="/bons-cadeau/configuration">A COMPLETER</a>
                      </li>
                               </ul>
          </div>
